[package]
name = "frost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.13", features = ["serde"] }
hex = "0.4.3"
num-traits = "0.2"
polynomial = "0.2.4"
rand_core = "0.5"
secp256k1-math = { git = "https://github.com/Trust-Machines/rust-secp256k1-math", rev = "ad35f79ce18d67fdd3c11697066b28ea38c5fbde" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.5"

[lib]
path = "src/lib.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "frost"
path = "src/main.rs"
